--- a/Understanding-TS-modules-03-finished-modules 2/package.json
+++ b/Understanding-TS-modules-03-finished-modules 2/package.json
@@ -15,11 +15,15 @@
   "author": "Maximilian Schwarzmüller",
   "license": "ISC",
   "devDependencies": {
+    "@types/lodash": "^4.14.178",
     "lite-server": "^2.5.4",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.5",
     "webpack": "^5.69.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
