--- a/Understanding-TS-prj-libs-01-starting-setup/package.json
+++ b/Understanding-TS-prj-libs-01-starting-setup/package.json
@@ -14,10 +14,14 @@
   "author": "Maximilian Schwarzmüller",
   "license": "ISC",
   "devDependencies": {
+    "@types/googlemaps": "^3.43.3",
     "ts-loader": "^7.0.3",
     "typescript": "^3.8.3",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
+  },
+  "dependencies": {
+    "axios": "^0.26.0"
   }
 }
